--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>AntecipaVida</title>
+    <title>Condominus</title>
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
     <!-- Bootstrap Icons -->
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Roboto:wght@300;400;500;700&display=swap"
         rel="stylesheet" />
 
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 </head>
 
@@ -24,19 +24,20 @@
     <header class="hero py-5">
         <div class="container px-5 pb-5 h-100">
             <div class="row gx-5 mt-5 mt-sm-0 align-items-sm-center h-100">
-                <div class="col-lg-5 col-sm-10">
+                <div class="col-lg-6 col-sm-10">
                     <!-- Header -->
                     <div class="text-start" id="header">
-                        <h1 class="text-secondary display-3 fw-bolder mb-5">
-                            AntecipaVida
+                        <h1 class="display-3 fw-bolder mb-5">
+                            Condominus
                         </h1>
                         <h2 class="text-black">
-                            Transforme seus compromissos financeiros em benefícios!
+                            Loren Ipsum Lorem Ipsum Lorem Ipsum!
                         </h2>
-                        <p class="my-5 text-black-60 fw-medium pe-5 pe-lg-0 me-5 me-lg-0">
-                            Conheça o novo parceiro da sua gestão financeira!<br />
-                            Ofereça pagamentos mais rápidos e tenha mais tempo para gerenciar suas finanças com
-                            eficiência.
+                        <p class="my-5 text-black-60 fw-medium pe-6 pe-lg-0 me-5 me-lg-0">
+                            Loren Ipsum Lorem Ipsum Lorem Ipsum!<br />
+                            Loren Ipsum Lorem Ipsum Lorem Ipsum
+                            Loren Ipsum Lorem Ipsum Lorem Ipsum
+                            Loren Ipsum Lorem Ipsum Lorem Ipsum!
                         </p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-start mb-3">
                             <a class="btn btn-primary btn-lg px-5 py-3 me-3 fs-6 fw-medium rounded-pill"
@@ -44,12 +45,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-12 col-md-10 mt-4 mt-lg-0 offset-lg-2" id="form-col">
-                    <div class="overflow-hidden rounded-4 bg-white opacity-75 m-auto" id="form-div">
-                        <iframe
-                            src="https://peerbnk.us14.list-manage.com/subscribe?u=4c1a6b546768b70c38ad742af&id=ad80166431"
-                            title="Formulário de Cadastro" scrolling="yes"></iframe>
-                    </div>
+                <div class="col-lg-6 col-12 col-md-10 mt-4 mt-lg-0" >
+                    <img src="assets/img/condominium.png" class="w-100"></img>
                 </div>
             </div>
         </div>
@@ -62,15 +59,14 @@
                     <div class="col-lg-12 pe-md-5">
                         <div>
                             <h3 class="fs-3 mb-5 lh-base">
-                                Parceira da sua gestão financeira para você focar no que faz de melhor:
+                                Loren Ipsum Loren Ipsum Loren Ipsum:
                                 <strong>cuidar!</strong>
                             </h3>
                             <p class="text-muted mb-0 lh-base">
-                                Maximize os lucros do seu hospital e fidelize seus profissionais com a MV Bank.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                                 <br />
                                 <br />
-                                Ofereça pagamentos mais rápidos, receba cashback e tenha mais tempo para pagar - <b>tudo
-                                    isso sem custo para o seu caixa.</b>
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum - <b>Loren Ipsum Loren Ipsum.</b>
                             </p>
                         </div>
                     </div>
@@ -83,9 +79,9 @@
                                     <img src="./assets/icon/wallet.webp" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Custo ZERO</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
                                     <p class="text-muted mb-0">
-                                        Sem custo operacional, o hospital não paga nada.
+                                        Loren Ipsum, Loren Ipsum Loren Ipsum.
                                     </p>
                                 </div>
                             </div>
@@ -96,9 +92,9 @@
                                     <img src="./assets/icon/mobile.webp" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Totalmente online</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
                                     <p class="text-muted mb-0">
-                                        Acesso prático, rápido e eficaz, sem burocracias.
+                                        Loren Ipsum, Loren Ipsum, Loren Ipsum.
                                     </p>
                                 </div>
                             </div>
@@ -109,9 +105,9 @@
                                     <img src="./assets/icon/invoice.webp" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Gestão financeira</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
                                     <p class="text-muted mb-0">
-                                        Organize e tenha mais controle das notas emitidas.
+                                        Loren Ipsum Loren Ipsum Loren Ipsum.
                                     </p>
                                 </div>
                             </div>
@@ -122,9 +118,9 @@
                                     <img src="./assets/icon/devices.webp" class="h-auto w-100 mx-auto" />
                                 </div>
                                 <div class="col-8">
-                                    <h3 class="h5 mb-2 fw-bold">Plataforma intuitiva</h3>
+                                    <h3 class="h5 mb-2 fw-bold">Loren Ipsum</h3>
                                     <p class="text-muted mb-0">
-                                        Centralize toda a gestão numa plataforma digital e intuitiva.
+                                        Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                                     </p>
                                 </div>
                             </div>
@@ -141,7 +137,7 @@
                 <div class="col-lg-5 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="hospitals">
                     <div class="row text-center text-md-start">
                         <h2>
-                            Para os <strong class="text-secondary">Hospitais:</strong>
+                            Loren <strong class="text-secondary">Ipsum:</strong>
                         </h2>
                     </div>
                     <div class="row mt-2rem">
@@ -150,7 +146,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Tenha uma maior fidelização e menor evasão dos profissionais.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -160,7 +156,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Sem custo operacional, seu hospital não paga nada por isso.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -170,7 +166,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Diminua atritos na relação médico e instituição.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -180,7 +176,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Parceria com Healthtech de ampla experiência no setor financeiro.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -190,14 +186,14 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Organize seu sistema financeiro e tenha mais controle das notas emitidas.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="doctors">
                     <div class="row text-center text-md-start">
-                        <h2>Para os <strong class="text-primary">Médicos:</strong></h2>
+                        <h2>Loren <strong class="text-primary">Ipsum:</strong></h2>
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
@@ -205,7 +201,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Receba por seus serviços de forma simples em até 24h.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -215,7 +211,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Visualize recebíveis de serviços realizados, em um só lugar.
+                                Loren Ipsum Loren Ipsum, Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -225,7 +221,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Tenha flexibilidade para receber por TED, boleto, DOC ou pagamento instantâneo.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -235,7 +231,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Centralize toda a gestão em uma plataforma digital e intuitiva.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -245,7 +241,7 @@
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
-                                Não comprometer seu limite de crédito ou com juros abusivos de empréstimos.
+                                Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
                             </p>
                         </div>
                     </div>
@@ -260,8 +256,8 @@
     <section class="page-section pb-0" id="contact">
         <div class="container px-4 px-lg-5 text-center">
             <a class="btn btn-primary btn-lg px-5 py-3 fs-6 fw-medium rounded-pill"
-                href="https://api.whatsapp.com/send/?phone=5511945364717&text=Quero+saber+mais+sobre+a+antecipa%C3%A7%C3%A3o&type=phone_number&app_absent=0"
-                target="_blank">Quero falar com um especialista</a>
+                href=""
+                target="_blank">Loren Ipsum</a>
         </div>
     </section>
     <!-- Tutorial -->
@@ -310,8 +306,8 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Entre no <b><a href="https://antecipacao.mvbnk.com.br/login" target="_blank"
-                                            class="text-secondary"><u>portal de acesso</u></a></b> da MVBank
+                                    Entre no <b><a href="" target="_blank"
+                                            class="text-secondary"><u>portal de acesso</u></a></b> 
                                 </h2>
                                 <p class="text-secondary mb-5">
                                     <b>Importante:</b> será necessário realizar um cadastro prévio com nossos
@@ -426,9 +422,8 @@
                                             ao início
                                         </a>
                                         <a class="btn btn-primary btn-lg px-lg-4 py-3 fs-6 rounded-pill fw-medium text-sm-nowrap"
-                                            href="https://api.whatsapp.com/send/?phone=5511945364717&text=Quero+saber+mais+sobre+a+antecipa%C3%A7%C3%A3o&type=phone_number&app_absent=0"
-                                            target="_blank">QUERO
-                                            ANTECIPAR</a>
+                                            href=""
+                                            target="_blank">Loren Ipsum</a>
                                     </div>
                                 </div>
                             </div>
@@ -447,8 +442,8 @@
             <div class="row">
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-last text-center text-lg-start">
                     <a class="btn btn-primary btn-lg px-5 py-4 fs-6 rounded-pill fw-medium"
-                        href="https://api.whatsapp.com/send/?phone=5511945364717&text=Quero+saber+mais+sobre+a+antecipa%C3%A7%C3%A3o&type=phone_number&app_absent=0"
-                        target="_blank">Falar com especialista</a>
+                        href=""
+                        target="_blank">Loren Ipsum</a>
                 </div>
 
                 <div
@@ -497,15 +492,17 @@
                         privacidade</a>
                 </div>
                 <div class="me-md-auto text-center text-lg-start text-white pt-5 pt-lg-0 d-inline-block">
-                    <span>© 2021-2023 - Todos os direitos reservados -</span>
-                    <span>GLOBAL HEALTH GHB S/A - CNPJ</span>
-                    <span>46.890.749/0001-52</span>
+                    <span>© 2023-2023 - Todos os direitos reservados -</span>
+                    <span>Condominus, a trademark by Skyline</span>
+                    <br>
+                    <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais" class="text-white text-decoration-none">Hero Image by macrovector</a> on Freepik</span>
                 </div>
             </div>
         </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.1.1/model-viewer.min.js"></script>
 </body>
 
 </html>
