--- a/index.html
+++ b/index.html
@@ -451,23 +451,23 @@
                     <img src="assets/img/logo.webp" class="w-75 mb-4" />
                     <div class="row">
                         <div class="col col-lg-2">
-                            <a href="https://www.youtube.com/channel/UCh-2BQANKM9opyIcKu8pSAA"><img
+                            <a href=""><img
                                     src="assets/icon/youtube.webp" class="social-media" /></a>
                         </div>
                         <div class="col col-lg-2">
-                            <a href="https://www.linkedin.com/company/mv-sa-oficial"><img
+                            <a href=""><img
                                     src="assets/icon/linkedin.webp" class="social-media" /></a>
                         </div>
                         <div class="col col-lg-2">
-                            <a href="https://www.facebook.com/mvsaudedigital"><img src="assets/icon/facebook.webp"
+                            <a href=""><img src="assets/icon/facebook.webp"
                                     class="social-media" /></a>
                         </div>
                         <div class="col col-lg-2">
-                            <a href="https://instagram.com/mvsaudedigital"><img src="assets/icon/instaram.webp"
+                            <a href=""><img src="assets/icon/instaram.webp"
                                     class="social-media" /></a>
                         </div>
                         <div class="col col-lg-2">
-                            <a href="https://twitter.com/mvsaudedigital"><img src="assets/icon/twitter.webp"
+                            <a href=""><img src="assets/icon/twitter.webp"
                                     class="social-media" /></a>
                         </div>
                     </div>
@@ -475,12 +475,12 @@
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-0 text-center text-lg-start">
                     <h5 class="text-white mb-4">Suporte ao cliente</h5>
-                    <a href="mailto:contato@mvbnk.com.br" class="text-white text-decoration-none">Fale Conosco</a>
+                    <a href="" class="text-white text-decoration-none">Fale Conosco</a>
                 </div>
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-1 text-center text-lg-start">
                     <h5 class="text-white mb-4">Institucional</h5>
-                    <a href="https://mv.com.br/sobre-a-mv" class="text-white text-decoration-none">Conheça a MV</a>
+                    <a href="" class="text-white text-decoration-none">Loren Ipsum</a>
                 </div>
             </div>
         </div>
