--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <div>
                             <h3 class="fs-3 mb-5 lh-base">
                                 Loren Ipsum Loren Ipsum Loren Ipsum:
-                                <strong>cuidar!</strong>
+                                <strong>Ipsum!</strong>
                             </h3>
                             <p class="text-muted mb-0 lh-base">
                                 Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
@@ -265,8 +265,8 @@
         <div class="container p-5 text-center border rounded-4 border-primary">
             <div class="carousel slide carousel-fade" id="tutorial">
                 <div class="row">
-                    <h2 class="text-primary fw-light">Quer saber como funciona?</h2>
-                    <h3 class="text-secondary"><b>Confira o passo-a-passo</b></h3>
+                    <h2 class="text-primary fw-light">Loren Ipsum Loren Ipsum?</h2>
+                    <h3 class="text-secondary"><b>Loren Ipsum Loren Ipsum</b></h3>
                 </div>
                 <div class="carousel-indicators dashed py-5 p-lg-5 mx-lg-5 row justify-content-center position-static">
                     <div class="col px-0 d-flex justify-content-center">
@@ -306,15 +306,13 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Entre no <b><a href="" target="_blank"
-                                            class="text-secondary"><u>portal de acesso</u></a></b> 
+                                    Loren Ipsum <b><a href="" target="_blank"
+                                            class="text-secondary"><u>Loren Ipsum</u></a></b> 
                                 </h2>
                                 <p class="text-secondary mb-5">
-                                    <b>Importante:</b> será necessário realizar um cadastro prévio com nossos
-                                    operadores.
-                                    <br /><a href="#form-col" class="text-secondary text-decoration-none">Clique
-                                        aqui</a>
-                                    e preencha as informações para contato.
+                                    <b>Loren Ipsum:</b> Loren Ipsum Loren Ipsum Loren Ipsum Loren Ipsum.
+                                    <br /><a href="#form-col" class="text-secondary text-decoration-none">Loren Ipsum</a>
+                                    Loren Ipsum Loren Ipsum Loren Ipsum.
                                 </p>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -332,7 +330,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Defina sua <b>senha de acesso</b> para entrar no portal.
+                                    Loren Ipsum <b>Loren Ipsum</b> Loren Ipsum Loren Ipsum.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -358,7 +356,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    <b>Visualize e simule</b> suas antecipações.
+                                    <b>Loren Ipsum</b> Loren Ipsum.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -384,7 +382,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    Envie dados para <b>nota fiscal</b> e assine o <b>contrato de adesão.</b>
+                                    Loren Ipsum <b>Loren Ipsum</b> Loren Ipsum <b>Loren Ipsum.</b>
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
@@ -410,7 +408,7 @@
                             class="col-md-8 d-md-flex pt-5 pt-md-0 align-items-center text-center text-md-start position-relative">
                             <div class="row">
                                 <h2 class="text-secondary mb-5">
-                                    <b>Pronto!</b> Agora aguarde o pagamento.
+                                    <b>Loren Ipsum!</b> Loren Ipsum Loren Ipsum.
                                 </h2>
                             </div>
                             <div class="position-absolute bottom-0 buttons">
