--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 <div class="col-lg-6 col-sm-10">
                     <!-- Header -->
                     <div class="text-start" id="header">
-                        <h1 class="display-3 fw-bolder mb-5">
+                        <h1 class="display-3 fw-bolder mb-5 text-green">
                             Condominus
                         </h1>
-                        <h2 class="text-black">
+                        <h2 class="text-green">
                             Loren Ipsum Lorem Ipsum Lorem Ipsum!
                         </h2>
                         <p class="my-5 text-black-60 fw-medium pe-6 pe-lg-0 me-5 me-lg-0">
@@ -40,7 +40,7 @@
                             Loren Ipsum Lorem Ipsum Lorem Ipsum!
                         </p>
                         <div class="d-grid gap-3 d-sm-flex justify-content-start mb-3">
-                            <a class="btn btn-primary btn-lg px-5 py-3 me-3 fs-6 fw-medium rounded-pill"
+                            <a class="btn btn-primary btn-lg px-5 py-3 me-3 fs-6 fw-medium rounded-pill shadow"
                                 href="#benefits">Saiba mais</a>
                         </div>
                     </div>
@@ -134,15 +134,15 @@
     <div id="benefits">
         <div class="container p-0">
             <div class="row g-0">
-                <div class="col-lg-5 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="hospitals">
+                <div class="col-lg-4 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="hospitals">
                     <div class="row text-center text-md-start">
                         <h2>
-                            Loren <strong class="text-secondary">Ipsum:</strong>
+                            Loren <strong class="text-green-2">Ipsum:</strong>
                         </h2>
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkblue.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -152,7 +152,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkblue.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -162,7 +162,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkblue.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -172,7 +172,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkblue.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -182,7 +182,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkblue.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -191,13 +191,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-5 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="doctors">
+                <div class="col-lg-4 col-md-6 d-grid align-items-center p-4 pe-lg-10 py-5 my-4" id="doctors">
                     <div class="row text-center text-md-start">
-                        <h2>Loren <strong class="text-primary">Ipsum:</strong></h2>
+                        <h2>Loren <strong class="text-green-2">Ipsum:</strong></h2>
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkgreen.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -207,7 +207,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkgreen.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -217,7 +217,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkgreen.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -227,7 +227,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkgreen.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -237,7 +237,7 @@
                     </div>
                     <div class="row mt-2rem">
                         <div class="col-1 d-flex align-items-center">
-                            <img src="assets/icon/checkgreen.webp" class="check" />
+                            <img src="assets/icon/check.png" class="check" />
                         </div>
                         <div class="col-10 ps-4">
                             <p class="text-muted d-inline align-middle">
@@ -246,8 +246,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-2 d-none d-lg-inline">
-                    <img src="assets/img/medico.webp" />
+                <div class="col-4 d-none d-lg-flex align-items-center">
+                    <img src="assets/img/apartment.png" class="w-100"/>
                 </div>
             </div>
         </div>
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/1-inicio.webp" class="w-75" />
+                            <img src="assets/img/Normal-1.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
@@ -348,7 +348,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/2-senha.webp" class="w-75" />
+                            <img src="assets/img/Normal-2.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
@@ -374,7 +374,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/3-menu.webp" class="w-75" />
+                            <img src="assets/img/Normal-3.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
@@ -400,7 +400,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/4-notafiscal.webp" class="w-75" />
+                            <img src="assets/img/Normal-4.png" class="w-75" />
                         </div>
                     </div>
                     <div class="row carousel-item flex-column-reverse flex-md-row">
@@ -427,7 +427,7 @@
                             </div>
                         </div>
                         <div class="col-md-4 text-md-end">
-                            <img src="assets/img/5-finalizar.webp" class="w-75" />
+                            <img src="assets/img/Normal-1.png" class="w-75" />
                         </div>
                     </div>
                 </div>
@@ -446,29 +446,7 @@
 
                 <div
                     class="col-lg-3 col-md-6 offset-md-3 offset-lg-0 my-4 my-lg-0 order-lg-first text-center text-lg-start">
-                    <img src="assets/img/logo.webp" class="w-75 mb-4" />
-                    <div class="row">
-                        <div class="col col-lg-2">
-                            <a href=""><img
-                                    src="assets/icon/youtube.webp" class="social-media" /></a>
-                        </div>
-                        <div class="col col-lg-2">
-                            <a href=""><img
-                                    src="assets/icon/linkedin.webp" class="social-media" /></a>
-                        </div>
-                        <div class="col col-lg-2">
-                            <a href=""><img src="assets/icon/facebook.webp"
-                                    class="social-media" /></a>
-                        </div>
-                        <div class="col col-lg-2">
-                            <a href=""><img src="assets/icon/instaram.webp"
-                                    class="social-media" /></a>
-                        </div>
-                        <div class="col col-lg-2">
-                            <a href=""><img src="assets/icon/twitter.webp"
-                                    class="social-media" /></a>
-                        </div>
-                    </div>
+                    <img src="assets/img/logo.png" class="w-75" />
                 </div>
 
                 <div class="col-lg-3 my-4 my-lg-0 order-lg-0 text-center text-lg-start">
@@ -494,6 +472,10 @@
                     <span>Condominus, a trademark by Skyline</span>
                     <br>
                     <span><a href="https://www.freepik.com/free-vector/suburbia-buildings-composition-with-lawns-apartments-streets-isometric_7286650.htm#query=apartment%20building%20isometric&position=11&from_view=search&track=ais" class="text-white text-decoration-none">Hero Image by macrovector</a> on Freepik</span>
+                    <br>
+                    <span>Icon by <a href="https://freeicons.io/profile/726" class="text-white text-decoration-none">Free Preloaders</a> on <a href="https://freeicons.io" class="text-white text-decoration-none">freeicons.io</a></span>
+                    <br>
+                    <span>Apartment image by <a href="https://www.pngwing.com/en/free-png-zckqy" class="text-white text-decoration-none">PNG Wing</a></span>
                 </div>
             </div>
         </div>
